Update Error Prone and NullAway to latest (#1878)
Fix a number of calls to use `StandardCharsets.UTF_8` to fix a new Error
Prone warning